--- a/fuck.vcxproj
+++ b/fuck.vcxproj
@@ -139,15 +139,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BasFunc.cpp" />
-    <ClCompile Include="BasFuncBlock.cpp" />
+    <ClCompile Include="AbsFuncBlock.cpp" />
+    <ClCompile Include="AbsFuncDerivator.cpp" />
+    <ClCompile Include="AbsFuncLoader.cpp" />
+    <ClCompile Include="AbsFuncReducer.cpp" />
+    <ClCompile Include="AbsFuncWriter.cpp" />
     <ClCompile Include="fuck.cpp" />
-    <ClCompile Include="FuncReader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BasFunc.h" />
-    <ClInclude Include="BasFuncBlock.h" />
-    <ClInclude Include="FuncReader.h" />
+    <ClInclude Include="AbsFuncBlock.h" />
+    <ClInclude Include="AbsFuncDerivator.h" />
+    <ClInclude Include="AbsFuncLoader.h" />
+    <ClInclude Include="AbsFuncReducer.h" />
+    <ClInclude Include="AbsFuncWriter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
